--- a/src/main/resources/static/css/productpal.css
+++ b/src/main/resources/static/css/productpal.css
@@ -1,3 +1,7 @@
+body {
+background-color: white;
+}
+
 .body-content {
     margin-top: 72px;
 }
@@ -12,6 +16,10 @@ th {
 
 td {
     vertical-align: top;
+}
+
+tr {
+    background-color: white;
 }
 
 tr:nth-child(odd) {
